--- a/scripts/04_explore_predictors.Rmd
+++ b/scripts/04_explore_predictors.Rmd
@@ -8,7 +8,7 @@ output:
     toc_float: yes
 ---
 
-Check out the distributions of all response and predictor variables, and any multicollinearity of predictor variables.
+Check for normality and multicollinearity of predictor variables. 
 
 
 
@@ -46,26 +46,10 @@ colnames(mydat2)
 
 ## Distributions
 
-### Response
-```{r}
-plotdat <- mydat1 %>%
-  pivot_longer(cols=colnames(mydat1)[c(4:7)], names_to="variable")
-ggplot(data=plotdat, aes(x=value)) + 
-  geom_histogram() + 
-  facet_wrap(~variable,ncol=2,scales="free")
-```
-<br>
-
-Log of Response
-```{r}
-ggplot(data=plotdat, aes(x=log(value))) + 
-  geom_density() + 
-  facet_wrap(~variable,ncol=2,scales="free")
-```
-<br>
-
-
 ### Predictor: Herbivory
+
+*These variables are zero-inflated. a transformation is unlikely to work completely. Instead, we would have two predictor variables - are there urchins (categorical, 1/0) and if there are, how abundant are they?*
+
 ```{r}
 plotdat <- mydat1 %>%
   pivot_longer(cols=colnames(mydat1)[c(10:12)], names_to="variable")
@@ -75,17 +59,33 @@ ggplot(data=plotdat, aes(x=value)) +
 ```
 <br>
 
-Log of Variable
+Square Root of Variable
 ```{r}
-ggplot(data=plotdat, aes(x=log(value))) + 
+ggplot(data=plotdat, aes(x=sqrt(value))) + 
   geom_density() + 
   facet_wrap(~variable,ncol=2,scales="free")
+shapiro.test(sqrt(as.numeric(mydat1$urchin_abundance)))
 ```
+<br>
 
+Just looking at the values > 0
+```{r}
+ggplot(data=filter(mydat1,urchin_abundance > 0), aes(x=urchin_abundance)) + 
+  geom_histogram()
+```
+<br>
+
+Square Root of Variable
+```{r}
+ggplot(data=filter(mydat1,urchin_abundance > 0), aes(x=sqrt(urchin_abundance))) + 
+  geom_histogram()
+shapiro.test(sqrt(as.numeric(filter(mydat1, urchin_abundance>0)$urchin_abundance)))
+```
+<br>
 
 ### Predictor: Water Chemistry
 
-Max Values
+#### Max Values
 ```{r}
 plotdat <- mydat1 %>%
   pivot_longer(cols=colnames(mydat1)[c(13:18)], names_to="variable")
@@ -95,22 +95,33 @@ ggplot(data=plotdat, aes(x=value)) +
 ```
 <br>
 
-Log /sqrt of max variables
+Log of max variables
 ```{r}
 plotdat <- mydat1 %>%
   pivot_longer(cols=c(max_pon,max_poc,max_tchl), names_to="variable")
 ggplot(data=plotdat, aes(x=log(value))) + 
   geom_density() + 
   facet_wrap(~variable,ncol=2,scales="free")
+mydat1 %>%
+  dplyr::select(max_pon,max_poc,max_tchl) %>%
+  map(function(x) shapiro.test(as.numeric(log(x))))
+```
+
+Max variables to the third power
+```{r}
 plotdat <- mydat1 %>%
   pivot_longer(cols=c(max_ammonia,max_no2_no3,max_po4), names_to="variable")
-ggplot(data=plotdat, aes(x=value^2)) + 
+ggplot(data=plotdat, aes(x=value^3)) + 
   geom_density() + 
   facet_wrap(~variable,ncol=2,scales="free")
+
+mydat1 %>%
+  dplyr::select(max_ammonia,max_no2_no3,max_po4) %>%
+  map(function(x) shapiro.test(as.numeric((x^3))))
 ```
 <br>
 
-Mean values
+#### Mean values
 ```{r}
 plotdat <- mydat1 %>%
   pivot_longer(cols=colnames(mydat1)[c(19:24)], names_to="variable")
@@ -120,13 +131,17 @@ ggplot(data=plotdat, aes(x=value)) +
 ```
 <br>
 
-Log of mean variables
+Log of mean variables. Mostly works!
 ```{r}
 plotdat <- mydat1 %>%
   pivot_longer(cols=c(mean_pon,mean_poc,mean_tchl), names_to="variable")
 ggplot(data=plotdat, aes(x=log(value))) + 
   geom_density() + 
   facet_wrap(~variable,ncol=2,scales="free")
+
+mydat1 %>%
+  dplyr::select(mean_pon,mean_poc,mean_tchl) %>%
+  map(function(x) shapiro.test(as.numeric(log(x))))
 ```
 
 
@@ -139,7 +154,28 @@ plotdat <- mydat1 %>%
 ggplot(data=plotdat, aes(x=value)) + 
   geom_histogram() + 
   facet_wrap(~variable,ncol=2,scales="free")
+
+mydat1 %>%
+  dplyr::select(colnames(mydat1)[c(25:28)]) %>%
+  map(function(x) shapiro.test(as.numeric(x)))
 ```
+
+Log-transform summer temperatures
+```{r}
+mydat1 %>%
+  dplyr::select(colnames(mydat1)[c(25:26)]) %>%
+  map(function(x) shapiro.test(as.numeric(log(x))))
+```
+<br>
+
+Square root of winter temperatures
+```{r}
+mydat1 %>%
+  dplyr::select(colnames(mydat1)[c(27:28)]) %>%
+  map(function(x) shapiro.test(as.numeric(sqrt(x))))
+```
+<br>
+
 
 ## Multicollinearity
 
@@ -161,23 +197,6 @@ corrplot(cor(mydat1[,c(10:12,19:28)], use="complete.obs"), type="upper")
 
 ## Distributions
 
-### Response
-```{r}
-plotdat <- dplyr::select(mydat2, -year, -month) %>%
-  pivot_longer(cols=colnames(mydat2)[c(4:9)], names_to="variable")
-ggplot(data=plotdat, aes(x=value)) + 
-  geom_histogram() + 
-  facet_wrap(~variable,ncol=3,scales="free")
-```
-<br>
-
-Log of Response
-```{r}
-ggplot(data=plotdat, aes(x=log(value))) + 
-  geom_density() + 
-  facet_wrap(~variable,ncol=3,scales="free")
-```
-
 ### Predictor: Water Temperature
 ```{r}
 plotdat <- dplyr::select(mydat2, -year, -month) %>%
@@ -186,6 +205,9 @@ ggplot(data=plotdat, aes(x=value)) +
   geom_histogram() + 
   facet_wrap(~variable,ncol=2,scales="free")
 ```
+
+*see transformations above*
+<br>
 
 ### Predictor: Water Chemistry
 ```{r}
@@ -204,6 +226,8 @@ ggplot(data=plotdat, aes(x=value)) +
 ```
 <br>
 
+*see transformations above*
+
 ### Predictor: Kelp
 
 ```{r}
@@ -220,6 +244,7 @@ Cubed root of variable
 ggplot(data=plotdat, aes(x=value^(1/3))) + 
   geom_density() + 
   facet_wrap(~variable,ncol=2,scales="free")
+shapiro.test((mydat2$kelp_total_biomass)^(1/3))
 ```
 
 ## Multicollinearity
