--- a/scripts/05_linear_models_timeseries_q1.Rmd
+++ b/scripts/05_linear_models_timeseries_q1.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Variable Selection Question 2"
 author: "Mary Fisher"
-date: "February 28, 2020"
+date: "February 28; Updated March 13"
 output: 
   html_document:
     toc: yes
@@ -218,96 +218,6 @@ I'll need to
 <br>
 <br>
 ---
-
-
-
-## Model Selection & Diagnostics
-
-### Size of Giant Kelp
-
-#### Fit model
-```{r}
-n <- dim(lmdat)[1]
-fit.a <- lm(mapy_mean_size ~ urchin_abundance+site+
-              mean_no2_no3+mean_ammonia+mean_tchl+mean_pon+mean_poc+
-              summer_mean_temp+winter_mean_temp+
-              prev_mean_size+site*prev_mean_size,data=lmdat)
-scp <- list(lower = ~ 1,
-           upper = ~ urchin_abundance+site+
-              mean_no2_no3+mean_ammonia+mean_tchl+mean_pon+mean_poc+
-             summer_mean_temp+winter_mean_temp+
-              prev_mean_size+site*prev_mean_size)
-
-fit.f <- step(fit.a, scope = scp, direction = "backward",  k = log(n))
-```
-<br>
-
-```{r eval=FALSE}
-n <- dim(lmdat)[1]
-fit.e <- lm(mapy_mean_size ~ 1,data=lmdat)
-
-fit.f <- step(fit.e, scope = scp, direction = "forward",  k = log(n))
-```
-<br>
-
-Final model: `mapy_mean_size ~ site + urchin_abundance + summer_mean_temp + mean_tchl + mean_no2_no3 + summer_mean_temp:mean_no2_no3`
-```{r}
-summary(fit.f)
-```
-<br>
-How does RSE / R squared compare to full model
-```{r}
-summary(fit.a)
-```
-<br>
-
-#### Model Diagnostics
-
-It looks like this model may violate the normality assumption, but there don't appear to be any outliers. 
-```{r}
-check_model(fit.f)
-```
-<br>
-    
-
-
-### Abundance of Giant Kelp
-
-#### Fit Model
-```{r}
-n <- dim(lmdat)[1]
-fit.abund.e <- lm(mapy_mean_abund ~ 1,data=lmdat)
-fit.abund.a <- lm(mapy_mean_abund ~  urchin_abundance+site+
-              mean_no2_no3+mean_ammonia+mean_tchl+mean_pon+mean_poc+
-              summer_mean_temp+winter_mean_temp+
-              prev_mean_size+site*prev_mean_size,data=lmdat)
-scp <- list(lower = ~ 1,
-           upper = ~  urchin_abundance+site+
-              mean_no2_no3+mean_ammonia+mean_tchl+mean_pon+mean_poc+
-              summer_mean_temp+winter_mean_temp+
-              prev_mean_size+site*prev_mean_size,data=lmdat)
-```
-```{r eval=FALSE}
-fit.abund.f <- step(fit.abund.e, scope = scp, direction = "forward",  k = log(n))
-```
-
-```{r}
-fit.abund.f <- step(fit.abund.a, direction = "backward",  k = log(n))
-```
-<br>
-
-```{r}
-summary(fit.abund.f)
-summary(fit.abund.a)
-```
-<br>
-
-#### Model Diagnostics
-
-The first issue with this model is that the nitrogen concentration and the winter temperature are moderately correlated. A few other things look weird here: the TA plot shows a fan shape, suggesting that our estimates are less precise at higher values. The model also violates the assumption of normality, with a right tail on the residuals. 
-```{r}
-check_model(fit.abund.f)
-```
 
 
 
